<resources>
    <string name="app_name">TodoList</string>
    <string name="welcome_to_sdl">Welcome to SDL</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="calendar">Calendar</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="done_1">Done</string>
</resources>